[exporter] Include vm and program args in start
Adds the properly-escaped VM and program args to the
command line of start/start.bat.

Fixes #5180.

Signed-off-by: Fr Jeremy Krieg <fr.jkrieg@greekwelfaresa.org.au>